--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
@@ -12,13 +11,13 @@
   <link href="/index.css" rel="stylesheet" type="text/css">
 
   <title>Frontend Mentor | Calculator app</title>
-  <script src="math.js" type="text/javascript"></script>
+  <script src="math.js"></script>
   <link href="/font.css" rel="stylesheet">
 </head>
 
-<body data-new-gr-c-s-check-loaded="8.876.0" data-gr-ext-installed="" cz-shortcut-listen="true">
-  <div class="calc">
-    <p class="calc-text">calc</p>
+<body data-new-gr-c-s-check-loaded="8.876.0" data-gr-ext-installed="">
+  <header class="calc">
+    <h1 class="calc-text">calc</h1>
     <div class="themeDiv">
       <div class="theme">
         <span style="font-size: 1rem;padding: 1.5rem 1rem 0 1rem; font-weight: 700;">THEME</span>
@@ -44,7 +43,7 @@
       </tr>
     </div>
   </div>
-  </div>
+  </header>
 
   <div id="calc-screen" class="calc-screen"></div>
   
@@ -73,10 +72,10 @@
     <button class="row5_2" name="equalto" onclick='solutions()'>=</button>
   </div>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Akshaykumar I. Magrani</a>.
-  </div>
+  </footer>
 
   <script>
     // calculator operations
