--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <div id="calc-screen" class="calc-screen"></div>
   
-  <div class="numbers">
+  <main class="numbers">
     <button name="7" onclick='expression(7)'>7</button>
     <button name="8" onclick='expression(8)'>8</button>
     <button name="9" onclick='expression(9)'>9</button>
@@ -70,7 +70,7 @@
     <!-- Row 5 -->
     <button class="row5_1" name="reset" onclick='reset()'>RESET</button>
     <button class="row5_2" name="equalto" onclick='solutions()'>=</button>
-  </div>
+  </main>
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/?ref=challenge" target="_blank">Frontend Mentor</a>.
